<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_about"
        android:title="@string/pref_about_section_title">
        <Preference
            android:key="pref_key_send_feedback"
            android:title="@string/pref_feedback_title">
        </Preference>
        <Preference
            android:summary="@string/pref_rate_google_play_summary"
            android:title="@string/pref_rate_google_play">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.cura" />
        </Preference>
        <Preference
            android:key="pref_key_open_source_libs"
            android:title="@string/pref_open_source_libraries_title" />
    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:key="pref_key_advanced"-->
        <!--android:title="@string/pref_advanced_section_title">-->
        <!--<Preference-->
            <!--android:key="pref_key_sign_out"-->
            <!--android:title="@string/pref_advanced_sign_out_title">-->
        <!--</Preference>-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>