<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_page_number"
        android:orderInCategory="1"
        android:title="@string/sort_action_by_page_number" />
    <item
        android:id="@+id/sort_by_views"
        android:orderInCategory="3"
        android:title="@string/sort_action_by_date" />
    <item
        android:id="@+id/sort_by_name"
        android:orderInCategory="2"
        android:title="@string/sort_action_by_name" />
    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/gotit" />
</menu>