<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/bookmarkIMG"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <me.panavtec.drawableview.DrawableView
        android:id="@+id/drawable_view"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/imageProgressBar"
        android:indeterminate="false"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/blue"
        fab:fab_expandDirection="up"
        fab:fab_labelsPosition="left"
        fab:fab_labelStyle="@style/fab_labels_style"
        android:layout_marginBottom="105dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/red"
            fab:fab_title="@string/fab_action_clear" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/green"
            fab:fab_title="@string/fab_action_undo" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/yellow"
            android:src="@android:drawable/ic_notification_clear_all"
            fab:fab_title="@string/fab_action_color" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_thickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/purple"
            fab:fab_title="@string/fab_action_thickness" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>